Navbar structure done

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,4 +1,5 @@
 @import './base/normalize';
+@import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display&family=Roboto:wght@100;300;400;500;700;900&family=Spartan:wght@100;300;400;500;700;900&display=swap');
 @import "./base/vars";
 @import "./base/mixins";
 @import "./base/init";
