--- a/src/styles/base/_init.scss
+++ b/src/styles/base/_init.scss
@@ -14,7 +14,7 @@ html {
 
 body {
     font-size: 1.6rem;
-    font-family: $font;
+    font-family: $primaryFont;
     font-weight: $light;
     height: 100%;
 }
