--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -3,7 +3,7 @@
 $primaryDark: #333;
 $secondaryDark: #222;
 $backgroundDark: #111;
-$primaryLight: #eefffe;
+$primaryLight: #efffef;
 
 //* Breakpoints
 $sm-mobile: 480px;
