--- a/src/scss/styles/_footer.scss
+++ b/src/scss/styles/_footer.scss
@@ -3,7 +3,7 @@
     border-radius: 100%;
     fill: $backgroundDark;
     transform: scale(1.25);
-    transition: background-color 0.5s, transform 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
 }
 
 .contact {
@@ -18,7 +18,7 @@
         font-size: 0;
         list-style: none;
         margin: 0 auto;
-        padding: 4.8rem;
+        padding: 5rem;
         text-align: center;
         width: 110rem;
         max-width: 100%;
@@ -27,31 +27,61 @@
             display: inline-block;
             margin: 1.2rem;
             a {
-                height: 9.6rem;
-                width: 9.6rem;
+                height: 9rem;
+                width: 9rem;
+                transition: all 0.5s;
+
+                .svgContainer {
+                    display: block;
+                    overflow: visible;
+                    padding: 0 0 100%;
+                    position: relative;
+                    width: 100%;
+                    height: 0;
+
+                    & > * {
+                        position: absolute;
+                        height: 75%;
+                        width: 75%;
+                        top: 50%;
+                        left: 50%;
+                        transform: translate(-50%, -50%);
+                    }
+                }
+
+                &#contact_linkedIn {
+                    fill: $linkedIn;
+                    &:hover {
+                        background-color: $linkedIn;
+                        @extend %socialIconHover;
+                    }
+                }
+                &#contact_github {
+                    fill: white;
+                    &:hover {
+                        background-color: white;
+                        @extend %socialIconHover;
+                    }
+                }
+                &#contact_platzi {
+                    fill: $platzi;
+                    &:hover {
+                        background-color: $platzi;
+                        @extend %socialIconHover;
+                    }
+                }
+                &#contact_twitter {
+                    fill: $twitter;
+                    &:hover {
+                        background-color: $twitter;
+                        @extend %socialIconHover;
+                    }
+                }
             }
 
             a,
-            img {
+            svg {
                 display: block;
-            }
-
-            #contact {
-                &_linkedIn {
-                    fill: $linkedIn;
-                }
-                &_github {
-                    fill: $github;
-                }
-                &_platzi {
-                    fill: $platzi;
-                }
-                &_twitter {
-                    fill: $twitter;
-                }
-                &:hover {
-                    @extend %socialIconHover;
-                }
             }
         }
     }
