--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -33,3 +33,7 @@
     grid-template-columns: repeat($columns, 1fr);
     gap: $gap;
 }
+
+@mixin transition($prop, $time){
+    transition: $prop $time ease-in-out;
+}
