--- a/src/scss/styles/_footer.scss
+++ b/src/scss/styles/_footer.scss
@@ -1,35 +1,82 @@
 // TODO Footer styles and structure
 %socialIconHover {
-    border-radius: 100%;
     fill: $backgroundDark;
     transform: scale(1.25);
-    transition: all 0.5s ease-in-out;
+    transition: background 0.3s ease-in-out, fill 0.3s ease-in-out, transform 0.3s ease-in-out;
+}
+
+footer {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .contact {
-    // &__title {
-    // }
+    @include gridDisplay(2, 3rem);
+    margin: auto 0;
 
-    // &__email {
-    // }
+    &__title {
+        grid-column: 1/2;
+
+        &--title {
+            font-weight: $bold;
+            text-shadow: 0 0 10rem rgba(255, 246, 192, 0.35), 0 0 32px rgba(122, 65, 255, 0.24);
+            span {
+                background: linear-gradient(to right, $jsYellow, $csPurple);
+                background-clip: text;
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: transparent;
+            }
+        }
+
+        &--text {
+        }
+    }
+    &__button {
+        grid-row: 2/3;
+        margin-left: 0;
+        width: fit-content;
+        height: fit-content;
+        color: $primaryLight;
+        border: 2px double transparent;
+        background-image: linear-gradient(#111, #111), radial-gradient(circle at left top, $pyBlue, $vueGreen);
+        background-origin: border-box;
+        background-clip: padding-box, border-box;
+
+        &:hover {
+            filter: brightness(1.2);
+        }
+    }
+}
+
+.end {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
 
     &__socials {
+        grid-column: 2/3;
         display: block;
         font-size: 0;
         list-style: none;
         margin: 0 auto;
-        padding: 5rem;
+        padding: 0;
         text-align: center;
-        width: 110rem;
         max-width: 100%;
 
         li {
             display: inline-block;
             margin: 1.2rem;
+
             a {
-                height: 9rem;
-                width: 9rem;
-                transition: all 0.5s;
+                // TODO mobile icon sizes
+                height: 3rem;
+                width: 3rem;
+                border-radius: 25%;
+                transition: background 0.3s ease-in-out, fill 0.3s ease-in-out, transform 0.3s ease-in-out;
 
                 .svgContainer {
                     display: block;
@@ -50,28 +97,28 @@
                 }
 
                 &#contact_linkedIn {
-                    fill: $linkedIn;
+                    fill: $iconBg;
                     &:hover {
                         background-color: $linkedIn;
                         @extend %socialIconHover;
                     }
                 }
                 &#contact_github {
-                    fill: white;
+                    fill: $iconBg;
                     &:hover {
-                        background-color: white;
+                        background-color: $github;
                         @extend %socialIconHover;
                     }
                 }
                 &#contact_platzi {
-                    fill: $platzi;
+                    fill: $iconBg;
                     &:hover {
                         background-color: $platzi;
                         @extend %socialIconHover;
                     }
                 }
                 &#contact_twitter {
-                    fill: $twitter;
+                    fill: $iconBg;
                     &:hover {
                         background-color: $twitter;
                         @extend %socialIconHover;
@@ -84,5 +131,17 @@
                 display: block;
             }
         }
+    }
+
+    &__cr {
+        font-weight: $light;
+        font-size: 1.4rem;
+    }
+
+    &__msg {
+        font-size: 1.2rem;
+        font-family: $coolFont;
+        margin-top: 1rem;
+        margin-bottom: 3rem;
     }
 }
