Main component reestructure; Three implementation pending

--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -17,6 +17,15 @@ $primaryFont: 'Spartan', sans-serif;
 $secondaryFont: 'Roboto', sans-serif;
 $coolFont: 'Major Mono Display', monospace;
 
+//* Font sizes
+$h1: 6rem;
+$h2: 4.4rem;
+$h3: 3.6rem;
+$h4: 2.8rem;
+$h5: 2rem;
+$p: 1.6rem;
+
+
 //* Font weights
 $extraLight: 200;
 $light: 300;
