--- a/src/scss/base/_init.scss
+++ b/src/scss/base/_init.scss
@@ -33,27 +33,27 @@ h4 {
 }
 
 h1 {
-    font-size: 6rem;
+    font-size: $h1;
     font-weight: $extraBold;
 }
 
 h2 {
-    font-size: 4.4rem;
+    font-size: $h2;
     font-weight: $bold;
 }
 
 h3 {
-    font-size: 3.6rem;
+    font-size: $h3;
 }
 
 h4 {
-    font-size: 2.8rem;
+    font-size: $h4;
 }
 
 p {
     margin: 0;
     line-height: 1.4;
-    font-size: 1.6rem;
+    font-size: $p;
     font-family: $secondaryFont;
     font-weight: $light;
 }
