--- a/src/scss/styles/_main.scss
+++ b/src/scss/styles/_main.scss
@@ -1,4 +1,60 @@
-.main {
+main.container {
     height: 100vh;
+    @include gridDisplay(2, 1rem);
 
+    .landing {
+        margin: auto 0;
+
+        &--name {}
+
+        &--staticTitle {
+            float: left;
+            font-size: $h5;
+        }
+
+        &__rotatingTitle {
+            font-size: $h5;
+            float: left;
+            overflow: hidden;
+            position: relative;
+
+            &--content {
+                //TODO change padding values on resize
+                line-height: 1.4em;
+                margin-top: 0.2rem;
+                margin-left: 0.5rem;
+                display: inline-block;
+                color: #e74c3c;
+                position: relative;
+                white-space: nowrap;
+                top: 0;
+                left: 0;
+                animation: move 5s cubic-bezier(.38,0,.19,1);
+                animation-iteration-count: infinite;
+                animation-delay: 1s;
+            }
+
+
+        }
+    }
+}
+
+
+//-> Animations
+@keyframes move {
+    0% {
+        top: 0px;
+    }
+
+    25% {
+        top: -1.4em;
+    }
+
+    50% {
+        top: -1.4em*2;
+    }
+
+    75% {
+        top: -1.4em*3;
+    }
 }
