--- a/src/scss/base/_utils.scss
+++ b/src/scss/base/_utils.scss
@@ -6,5 +6,5 @@
     margin: 1rem;
     border-radius: 5rem;
     cursor: pointer;
-    @include transition(all, 0.2s);
+    @include transition(all, 0.2s, ease-in-out);
 }
