--- a/src/scss/styles/_main.scss
+++ b/src/scss/styles/_main.scss
@@ -3,15 +3,19 @@ main.container {
     @include gridDisplay(2, 1rem);
 
     .landing {
+        display: flex;
+        flex-direction: column;
+        gap: 3rem;
         margin: auto 0;
 
         &--name {
             font-family: $coolFont;
+            font-weight: $extraBold ;
             font-size: 7rem;
             background: linear-gradient(to top, silver, $primaryLight);
             // background: linear-gradient(to right, $jsYellow, $csPurple);
             background-clip: text;
-            text-shadow: 0 0 80px rgb(192 219 255 / 75%), 0 0 32px rgb(65 120 255 / 24%);
+            text-shadow: 0 0 80px rgba(214, 232, 255, 0.75), 0 0 32px rgb(65 120 255 / 24%);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
         }
@@ -30,28 +34,77 @@ main.container {
             height: 1.4em;
 
             &--content {
+                font-weight: $bold;
                 background: linear-gradient(to right, #9900F0, #CD113B, #FF7600, #FFA900);
-                // background: linear-gradient(to right, $jsYellow, $csPurple);
+                // background: linear-gradient(to right, $csPurple, #CD113B, #FF7600, $jsYellow);
                 background-clip: text;
                 -webkit-background-clip: text;
                 -webkit-text-fill-color: transparent;
 
                 //TODO change padding values on resize
                 line-height: 1.4em;
-                margin-top: 0.2rem;
                 margin-left: 0.8rem;
                 display: inline-block;
-                color: #e74c3c;
+                color: $primaryLight;
                 position: relative;
                 white-space: nowrap;
                 top: 0;
                 left: 0;
-                animation: move 5s cubic-bezier(.38, 0.8, .19, 1);
+                animation: move 8s cubic-bezier(.38, 0.8, .19, 1);
                 animation-iteration-count: infinite;
                 animation-delay: 1s;
             }
 
+        }
 
+        &__resume {
+            font-size: $h5;
+
+            &--button {
+                position: relative;
+                margin-left: 1rem;
+                text-transform: uppercase;
+                position: relative;
+                color: $primaryLight;
+                font-weight: bold;
+                background: $primaryLight;
+                background-clip: text;
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: transparent;
+
+                &:hover::after {
+                    background: linear-gradient(to right, #9900F0, #CD113B, #FF7600, #FFA900);
+                    background-clip: text;
+                    -webkit-background-clip: text;
+                    -webkit-text-fill-color: transparent;
+                    mask-image: linear-gradient(-75deg, rgba(0, 0, 0, 0) 20%, #000 50%, rgba(0, 0, 0, 0) 80%);
+                    mask-size: 200%;
+                    -webkit-mask-image: linear-gradient(-75deg, rgba(0, 0, 0, 0) 20%, #000 50%, rgba(0, 0, 0, 0) 80%);
+                    -webkit-mask-size: 200%;
+                    animation: shine 1.6s infinite;
+                }
+
+                &::after {
+                    content: 'RESUME';
+                    position: absolute;
+                    width: 100%;
+                    height: 100%;
+                    left: 0;
+                    background: none;
+                    background-clip: text;
+                    -webkit-background-clip: text;
+                    -webkit-text-fill-color: transparent;
+                }
+
+                &::before{
+                    content: '';
+                    position: absolute;
+                    width: 100%;
+                    height: 1px;
+                    bottom: 0;
+                    background-color: $primaryLight;
+                }
+            }
         }
     }
 }
@@ -63,15 +116,31 @@ main.container {
         top: 0px;
     }
 
-    25% {
+    20% {
         top: -1.4em;
     }
 
-    50% {
+    40% {
         top: -1.4em*2;
     }
 
-    75% {
+    60% {
         top: -1.4em*3;
+    }
+
+    80% {
+        top: -1.4em*4;
+    }
+}
+
+@keyframes shine {
+    from {
+        mask-position: 150%;
+        -webkit-mask-position: 150%;
+    }
+
+    to {
+        mask-position: -50%;
+        -webkit-mask-position: -50%;
     }
 }
