--- a/src/scss/styles/_navbar.scss
+++ b/src/scss/styles/_navbar.scss
@@ -1,12 +1,22 @@
 .navbar {
     width: 100%;
-    padding: 1rem 3rem;
+    padding: 1rem 5rem;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
 
-    &__icon{
+    &__icon {
         font-family: $coolFont;
         font-size: 3rem;
     }
-}   
+
+    &__links {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        gap: 2rem;
+        font-family: $primaryFont;
+        list-style-type: none;
+        // todo breakpoint structures
+    }
+}
