Added styles; responsiveness pending

--- a/src/scss/base/_init.scss
+++ b/src/scss/base/_init.scss
@@ -53,7 +53,7 @@ h4 {
 
 p {
     margin: 0;
-    line-height: 1.4;
+    line-height: $lineHeight;
     font-size: $p;
     font-family: $secondaryFont;
     font-weight: $light;
