--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -25,6 +25,7 @@ $h2: 4.4rem;
 $h3: 3.6rem;
 $h4: 2.8rem;
 $h5: 2rem;
+$h6: 1.8rem;
 $p: 1.6rem;
 
 //* Font weights
@@ -35,6 +36,7 @@ $bold: 700;
 $extraBold: 900;
 
 //? Other
+$lineHeight: 1.6;
 $linkedIn: #0e76a8;
 $github: #f0f6fc;
 $platzi: #98ca3f;
