--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -7,5 +7,6 @@
 
 //! Import app styles in here
 @import "./styles/navbar";
-@import "./styles/footer";
 @import "./styles/main";
+@import "./styles/about";
+@import "./styles/footer";
