Jump.js implemented for sections

--- a/src/scss/base/_init.scss
+++ b/src/scss/base/_init.scss
@@ -19,6 +19,7 @@ body {
     color: $primaryLight;
     background-color: $backgroundDark;
     height: 100%;
+    scroll-behavior: smooth;
 }
 
 img {
