Created Projects component

--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -2,6 +2,7 @@
 //* Colors
 $backgroundDark: #111;
 $primaryLight: #efffef;
+$secondaryLight: #d7e2d7;
 $jsYellow: #ffd43b;
 $pyBlue: #4b8bbe;
 $csPurple: #9b4993;
