--- a/src/scss/base/_init.scss
+++ b/src/scss/base/_init.scss
@@ -16,7 +16,7 @@ body {
     font-size: 1.6rem;
     font-family: $primaryFont;
     font-weight: $light;
-    color: $primaryLight;
+    color: $secondaryLight;
     background-color: $backgroundDark;
     height: 100%;
     scroll-behavior: smooth;
@@ -30,8 +30,10 @@ img {
 h1,
 h2,
 h3,
-h4 {
+h4,
+h5 {
     margin: 1rem 0;
+    color: $primaryLight;
 }
 
 h1 {
