--- a/src/scss/base/_init.scss
+++ b/src/scss/base/_init.scss
@@ -78,14 +78,33 @@ a {
 }
 
 #spaceBg {
+    // todo Workout background
+    // ? poisson generated stars
     position: fixed;
     top: 0;
     left: 0;
-    min-width: 100%;
-    min-height: 100%;
+    width: 100%;
+    height: 100%;
     z-index: -10;
-
     filter: brightness(50%);
+
+    img {
+        width: 100%;
+        height: 100%;
+    }
+
+    &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        display: block;
+        background: radial-gradient(ellipse at left, rgba(17, 1, 51, 0.5), transparent),
+            radial-gradient(ellipse at top right, rgba(76, 0, 112, 0.4), transparent),
+            radial-gradient(ellipse at bottom right, rgba(0, 145, 142, 0.3), transparent);
+    }
 }
 
 .container {
