--- a/src/scss/base/_init.scss
+++ b/src/scss/base/_init.scss
@@ -101,9 +101,15 @@ a {
         width: 100%;
         height: 100%;
         display: block;
-        background: radial-gradient(ellipse at left, rgba(17, 1, 51, 0.5), transparent),
-            radial-gradient(ellipse at top right, rgba(76, 0, 112, 0.4), transparent),
-            radial-gradient(ellipse at bottom right, rgba(0, 145, 142, 0.3), transparent);
+        background: radial-gradient(ellipse at left, rgba(7, 34, 39, 0.3), transparent),
+            radial-gradient(ellipse at top, rgba(76, 0, 112, 0.2), transparent),
+            radial-gradient(ellipse at right, rgba(0, 145, 142, 0.3), transparent),
+            radial-gradient(ellipse at bottom, rgba(169, 16, 121, 0.2), transparent);
+        mask-image: linear-gradient(-65deg, rgba(0, 0, 0, 0) 20%, #000, rgba(0, 0, 0, 0) 80%);
+        mask-size: 200%;
+        -webkit-mask-image: linear-gradient(-65deg, rgba(0, 0, 0, 1) 20%, rgba(0,0,0,0), rgba(0, 0, 0, 1) 80%);
+        -webkit-mask-size: 200%;
+        animation: shine 30s infinite linear;
     }
 }
 
