--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -9,4 +9,5 @@
 @import "./styles/navbar";
 @import "./styles/main";
 @import "./styles/about";
+@import "./styles/projects";
 @import "./styles/footer";
