--- a/src/scss/base/_utils.scss
+++ b/src/scss/base/_utils.scss
@@ -8,3 +8,8 @@
     cursor: pointer;
     @include transition(all, 0.2s, ease-in-out);
 }
+
+.btn-glow:hover{
+    box-shadow: rgba($primaryLight, 0.5) 0px 0px 4px 0px;
+    @include transition(all, 0.2s, ease-in-out);
+}
