Web performance increased with css

--- a/src/scss/base/_init.scss
+++ b/src/scss/base/_init.scss
@@ -5,7 +5,7 @@ html {
     box-sizing: border-box;
     height: 100%;
     content-visibility: auto;
-    contain-intrinsic-size: 1px, 700rem;
+    contain-intrinsic-size: 1px 500rem;
 }
 
 *,
