--- a/src/scss/base/_init.scss
+++ b/src/scss/base/_init.scss
@@ -64,6 +64,10 @@ p {
     font-weight: $light;
 }
 
+br {
+    margin-bottom: 1rem;
+}
+
 a {
     text-decoration: none;
     font-weight: $regular;
@@ -79,7 +83,7 @@ a {
     height: 100%;
 }
 
-#spaceBg {    
+#spaceBg {
     canvas {
         position: fixed;
         top: 0;
@@ -97,9 +101,9 @@ a {
         width: 100%;
         height: 100%;
         display: block;
-        background: radial-gradient(ellipse at left, rgba(7, 34, 39, 0.1), transparent),
-            radial-gradient(ellipse at top, rgba(76, 0, 112, 0.1), transparent),
-            radial-gradient(ellipse at right, rgba(0, 145, 142, 0.1), transparent),
+        background: radial-gradient(ellipse at left, rgba(7, 34, 39, 0.3), transparent),
+            radial-gradient(ellipse at top, rgba(76, 0, 112, 0.05), transparent),
+            radial-gradient(ellipse at right, rgba(0, 145, 142, 0.15), transparent),
             radial-gradient(ellipse at bottom, rgba(169, 16, 121, 0.1), transparent);
         mask-image: linear-gradient(-65deg, rgba(0, 0, 0, 0) 20%, #000, rgba(0, 0, 0, 0) 80%);
         mask-size: 200%;
