--- a/src/scss/styles/_footer.scss
+++ b/src/scss/styles/_footer.scss
@@ -23,6 +23,7 @@ footer {
         &--title {
             font-weight: $bold;
             text-shadow: 0 0 10rem rgba(255, 246, 192, 0.35), 0 0 32px rgba(122, 65, 255, 0.24);
+
             span {
                 background: linear-gradient(to right, $jsYellow, $csPurple);
                 background-clip: text;
@@ -30,18 +31,16 @@ footer {
                 -webkit-text-fill-color: transparent;
             }
         }
-
-        &--text {
-        }
     }
+
     &__button {
         grid-row: 2/3;
-        margin-left: 0;
+        margin-left: auto;
         width: fit-content;
         height: fit-content;
         color: $primaryLight;
         border: 2px double transparent;
-        background-image: linear-gradient(#111, #111), radial-gradient(circle at left top, $pyBlue, $vueGreen);
+        background-image: linear-gradient( #111, #111), radial-gradient(circle at left top, $pyBlue, $vueGreen);
         background-origin: border-box;
         background-clip: padding-box, border-box;
 
@@ -86,7 +85,7 @@ footer {
                     width: 100%;
                     height: 0;
 
-                    & > * {
+                    &>* {
                         position: absolute;
                         height: 75%;
                         width: 75%;
@@ -98,27 +97,34 @@ footer {
 
                 &#contact_linkedIn {
                     fill: $iconBg;
+
                     &:hover {
                         background-color: $linkedIn;
                         @extend %socialIconHover;
                     }
                 }
+
                 &#contact_github {
                     fill: $iconBg;
+
                     &:hover {
                         background-color: $github;
                         @extend %socialIconHover;
                     }
                 }
+
                 &#contact_platzi {
                     fill: $iconBg;
+
                     &:hover {
                         background-color: $platzi;
                         @extend %socialIconHover;
                     }
                 }
+
                 &#contact_twitter {
                     fill: $iconBg;
+
                     &:hover {
                         background-color: $twitter;
                         @extend %socialIconHover;
