Styling corrections. Create Mixins

--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -37,3 +37,14 @@
 @mixin transition($prop, $time, $bezier){
     transition: $prop $time $bezier;
 }
+
+@mixin textBackground($rule){
+    background: $rule;
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+@mixin textShadow{
+    text-shadow: 0px 0 8rem rgb(242 242 242 / 55%), 0 0 3.2rem rgb(46 2 77 / 25%); 
+}
