--- a/src/scss/styles/_footer.scss
+++ b/src/scss/styles/_footer.scss
@@ -21,14 +21,11 @@ footer {
         grid-column: 1/2;
 
         &--title {
+            @include textShadow();
             font-weight: $bold;
-            text-shadow: 0 0 10rem rgba(255, 246, 192, 0.35), 0 0 32px rgba(122, 65, 255, 0.24);
-
+            
             span {
-                background: linear-gradient(to right, $jsYellow, $csPurple);
-                background-clip: text;
-                -webkit-background-clip: text;
-                -webkit-text-fill-color: transparent;
+                @include textBackground(linear-gradient(to right, $jsYellow, $sassPink))
             }
         }
     }
