Fix Scramble component cicle

--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -26,7 +26,7 @@ $lg-desktop: 1720px;
 
 //* Fonts
 $primaryFont: 'Source Code Pro', monospace;
-$secondaryFont: 'Ubuntu','Noto Sans JP', sans-serif;
+$secondaryFont: 'Ubuntu', 'Noto Sans Symbols', 'Noto Sans Symbols 2', sans-serif;
 $coolFont: "Major Mono Display", monospace;
 
 //* Font sizes
