style scramble component

--- a/src/scss/styles/_main.scss
+++ b/src/scss/styles/_main.scss
@@ -29,11 +29,14 @@ main.container {
             font-size: $h6;
             color: $primaryLight;
             overflow: hidden;
+            font-weight: $regular;
         }
         
         &--text{
             position: relative;
             display: inline-block;
+
+            @include textBackground(linear-gradient(to right,  $reactBlue, $sassPink))
         }
 
         &--cursor{
