style scramble component

--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -6,7 +6,7 @@ $primaryLight: #efffef;
 $secondaryLight: #d7e2d7;
 
 //*: Technologies 
-$jsYellow: #f9e64f;
+$jsYellow: #f7ff00;
 $reactBlue: #61dafb;
 $vueGreen: #42b883;
 $svelteOrange: #ff3d00;
@@ -15,7 +15,7 @@ $nodeGreen: #215732;
 $denoWhite: #f2f2f2;
 $pyBlue: #3776ab;
 $csPurple: #9b4993;
-$sassPink: #bf4080;
+$sassPink: #db36a4;
 
 //* Breakpoints
 $sm-mobile: 480px;
