--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -3,7 +3,7 @@
 $backgroundDark: #111;
 $spacePurple: #2E0249;
 $primaryLight: #efffef;
-$secondaryLight: #d7e2d7;
+$secondaryLight: #e9f1e9;
 
 //*: Technologies 
 $jsYellow: #f7ff00;
