--- a/src/scss/styles/_about.scss
+++ b/src/scss/styles/_about.scss
@@ -14,6 +14,9 @@ section.container {
         }
 
         &--text {
+            a{
+                font-weight: $thin;
+            }
             span {
                 @include textBackground(linear-gradient(to right, #AAFFA9, #11FFBD));
             }
