refactor Home page; Projects and Contact pending

--- a/src/scss/styles/_navbar.scss
+++ b/src/scss/styles/_navbar.scss
@@ -25,5 +25,9 @@
         font-family: $primaryFont;
         list-style-type: none;
         // todo breakpoint structures
+
+        span::after {
+            content: "׀"
+        }
     }
 }   
