Refactor component structure

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -11,4 +11,5 @@
 @import "./styles/main";
 @import "./styles/about";
 @import "./styles/projects";
+@import "./styles/contact";
 @import "./styles/footer";
