--- a/src/scss/styles/_footer.scss
+++ b/src/scss/styles/_footer.scss
@@ -4,15 +4,15 @@
 
 .end {
     display: flex;
-    flex-direction: column;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-evenly;
+    background-color: $backgroundDark;
+    padding: 1rem 0;
 
     &__socials {
         display: block;
         font-size: 0;
         list-style: none;
-        margin: 0 auto;
         padding: 0;
         text-align: center;
         max-width: 100%;
@@ -79,7 +79,5 @@
     &__msg {
         font-size: 1.2rem;
         font-family: $coolFont;
-        margin-top: 1rem;
-        margin-bottom: 3rem;
     }
 }
