--- a/migration/src/scss/styles/_projects.scss
+++ b/migration/src/scss/styles/_projects.scss
@@ -24,151 +24,60 @@
         @include gridDisplay(3, 1fr);
         gap: 1.6rem;
 
-
-        &--card {
-            display: flex;
-            align-items: center;
-            justify-content: center;
+        .card {
+            max-width: 36rem;
+            width: 100%;
+            height: 100%;
+            padding: 1rem;
+            border: 3px ridge transparent;
+            background-image: linear-gradient(to top left, rgba(40, 40, 55), $backgroundDark), linear-gradient(#FDC830, #F37335);
+            background-origin: border-box;
+            background-clip: padding-box, border-box;
             position: relative;
             overflow: hidden;
-            margin: 1rem auto;
-            padding: 1rem;
-            height: 100%;
-            width: 100%;
-            max-width: 24rem;
-            border-radius: 1rem;
-            text-align: center;
-            background: linear-gradient(45deg, #37E2D5, #9900F0, #C70A80);
-            // todo 3 different gradients for cards
+            box-shadow: 0px 0px 0px;
+            @include transition(box-shadow, .2s, ease-in-out);
+            @include transition(border-width, .2s, ease-in-out);
 
-            &::before {
-                content: '';
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 110%;
-                background-size: cover;
-                background-position: 0 0;
-                transition: transform calc(0.7s * 1.5) cubic-bezier(0.19, 1, 0.22, 1);
-                pointer-events: none;
-            }
-
-            &:after {
-                content: '';
-                display: block;
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 200%;
-                pointer-events: none;
-                background-image: linear-gradient(to bottom,
-                        hsla(0, 0%, 0%, 0) 0%,
-                        hsla(0, 0%, 0%, 0.009) 11.7%,
-                        hsla(0, 0%, 0%, 0.034) 22.1%,
-                        hsla(0, 0%, 0%, 0.072) 31.2%,
-                        hsla(0, 0%, 0%, 0.123) 39.4%,
-                        hsla(0, 0%, 0%, 0.182) 46.6%,
-                        hsla(0, 0%, 0%, 0.249) 53.1%,
-                        hsla(0, 0%, 0%, 0.320) 58.9%,
-                        hsla(0, 0%, 0%, 0.394) 64.3%,
-                        hsla(0, 0%, 0%, 0.468) 69.3%,
-                        hsla(0, 0%, 0%, 0.540) 74.1%,
-                        hsla(0, 0%, 0%, 0.607) 78.8%,
-                        hsla(0, 0%, 0%, 0.668) 83.6%,
-                        hsla(0, 0%, 0%, 0.721) 88.7%,
-                        hsla(0, 0%, 0%, 0.762) 94.1%,
-                        hsla(0, 0%, 0%, 0.790) 100%);
-                transform: translateY(-50%);
-                transition: transform calc(0.7s * 2) cubic-bezier(0.19, 1, 0.22, 1);
-            }
-
-            .content {
-                position: relative;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
+            .card__content {
+                text-align: justify;
                 width: 100%;
                 padding: 1rem;
-                transition: transform 0.7s cubic-bezier(0.19, 1, 0.22, 1);
-                z-index: 1;
+                margin: -1rem 0;
+                color: transparent;
+                text-align: center;
+                @include transition(all, .4s, ease-in-out);
+            }
 
-                >*+* {
-                    margin-top: 1rem;
+
+            .card__img {
+                display: block;
+                object-fit: cover;
+                background: $backgroundDark;
+                width: 100%;
+                height: 100%;
+                position: absolute;
+                top: 0;
+                left: 0;
+                z-index: 2;
+                @include transition(all, 0.3s, ease-in-out);
+            }
+
+            &:hover {
+                box-shadow: 0px 0px 1rem;
+
+                .card__content {
+                    margin: 0;
+                    color: inherit;
+                }
+
+                .card__img {
+                    transform: scale(1.2);
+                    -webkit-filter: opacity(0) blur(0.5rem);
+                    filter: opacity(0) blur(0.5rem);
                 }
             }
 
-            .title {
-                font-size: 2rem;
-                font-weight: bold;
-                line-height: 1.2;
-            }
-
-            .btn {
-                font-size: 1.2rem;
-                padding: 1rem 3rem;
-                background-color: rgba($primaryLight, 0.15);
-                border: 1px solid rgba($primaryLight, 0.25);
-                color: rgba($primaryLight, 0.8);         
-                
-                &:hover {
-                    background-color: rgba($primaryLight, 0.25);
-                    border: 1px solid rgba($primaryLight, 0.5);
-                    color: rgba($primaryLight, 0.9);         
-                }
-            }
-        }
-
-        @media (hover: hover) and (min-width: $tablet) {
-            &--card:after {
-                transform: translateY(0);
-            }
-
-            .content {
-                transform: translateY(calc(100% - 4.5rem));
-
-                >*:not(.title) {
-                    opacity: 0;
-                    transform: translateY(1rem);
-                    transition:
-                        transform 0.7s,
-                        opacity 0.7s cubic-bezier(0.19, 1, 0.22, 1);
-                }
-            }
-
-            &--card:hover,
-            &--card:focus-within {
-                align-items: center;
-
-                &:before {
-                    transform: translateY(-4%);
-                }
-
-                &:after {
-                    transform: translateY(-50%);
-                }
-
-                .content {
-                    transform: translateY(0);
-
-                    >*:not(.title) {
-                        opacity: 1;
-                        transform: translateY(0);
-                        transition-delay: calc(0.7s / 8);
-                    }
-                }
-            }
-
-            &--card:focus-within {
-
-                &:before,
-                &:after,
-                .content,
-                .content>*:not(.title) {
-                    transition-duration: 0s;
-                }
-            }
         }
     }
 }
