--- a/migration/src/scss/styles/_about.scss
+++ b/migration/src/scss/styles/_about.scss
@@ -7,9 +7,31 @@ section.container {
         align-items: center;
         justify-content: center;
 
-        img {
-            clip-path: url(#va_svg__clip);
-            width: 80%;
+        &__clip {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            position: relative;
+            box-sizing: border-box;
+            min-width: 30%;
+            max-width: 60%;
+            min-height: 70%;
+            max-height: 70%;
+            border: 4px ridge transparent;
+            border-radius: 2rem;
+            background-image: linear-gradient(to top left, rgba(40, 40, 55), $backgroundDark), linear-gradient(to bottom right, #AF40FF, #5B42F3, #00DDEB);
+            background-origin: border-box;
+            background-clip: padding-box, border-box;
+            box-shadow: 0px 0px 2rem #5B42F3;
+            perspective: 20rem;
+            object-fit: cover;
+            transform-style: preserve-3d;
+
+            img {
+                transform: translateZ(3rem);
+                object-fit: cover;
+                clip-path: url(#va_svg__clip);
+            }
         }
     }
 
