--- a/migration/src/scss/base/_init.scss
+++ b/migration/src/scss/base/_init.scss
@@ -74,7 +74,7 @@ a {
 
     &:hover {
         color: $primaryLight;
-        text-shadow: 3px 3px 1px rgba(128, 128, 128,0.5);
+        text-shadow: 3px 3px 1px rgba(128, 128, 128, 0.5);
     }
 }
 
@@ -115,8 +115,8 @@ a {
 
 .container {
     //-> Base container template
-    width: 180rem;
     max-width: 80%;
+    width: 180rem;
     margin: 0 auto;
     content-visibility: auto;
     @include transition(max-width, 1s, ease-out);
