--- a/migration/src/scss/styles/_projects.scss
+++ b/migration/src/scss/styles/_projects.scss
@@ -1,123 +1,127 @@
-.projects {
-    grid-column: 1/3;
-    margin: auto 0;
-    text-align: center;
+section.container#projects {
+    height: fit-content;
 
-    &--title {
-        @include textShadow();
+    .projects {
+        grid-column: 1/3;
+        margin: auto 0;
+        text-align: center;
 
-        span {
-            @include textBackground(linear-gradient(to right, $jsYellow, $sassPink))
+        &--title {
+            @include textShadow();
+
+            span {
+                @include textBackground(linear-gradient(to right, $jsYellow, $sassPink))
+            }
         }
-    }
 
-    &--mini {
-        margin-top: 1ch;
-        font-size: 1.2rem;
-        font-weight: $light;
-    }
+        &--mini {
+            margin-top: 1ch;
+            font-size: 1.2rem;
+            font-weight: $light;
+        }
 
-    &__showcase {
-        max-width: 100rem;
-        height: 44rem;
-        margin: 2.4rem auto;
-        @include gridDisplay(3, 1fr);
-        gap: 1.6rem;
+        &__showcase {
+            max-width: 100rem;
+            height: 44rem;
+            margin: 2.4rem auto;
+            @include gridDisplay(3, 1fr);
+            gap: 1.6rem;
 
-        .card {
-            max-width: 36rem;
-            width: 100%;
-            height: 100%;
-            padding: 1rem;
-            border: 0px ridge transparent;
-            border-radius: 0.5rem;
-            background-image: linear-gradient(to top left, rgba(40, 40, 55), $backgroundDark), linear-gradient(to bottom right, #AF40FF, #5B42F3, #00DDEB);
-            background-origin: border-box;
-            background-clip: padding-box, border-box;
-            position: relative;
-            overflow: hidden;
-            box-shadow: 0px 0px 0.8rem;
-            @include transition(box-shadow, .2s, ease-in-out);
-            @include transition(border, .2s, ease-in-out);
-
-            .card__content {
-                display: flex;
-                align-items: center;
+            .card {
+                max-width: 36rem;
                 width: 100%;
                 height: 100%;
                 padding: 1rem;
-                margin: -1rem 0;
-                color: transparent;
-                text-align: center;
-                z-index: 1;
-                -webkit-filter: opacity(0);
-                filter: opacity(0);
-                @include transition(all, .4s, ease-in-out);
-                
-                div {
-                    height: 90%;
+                border: 0px ridge transparent;
+                border-radius: 0.5rem;
+                background-image: linear-gradient(to top left, rgba(40, 40, 55), $backgroundDark), linear-gradient(to bottom right, #AF40FF, #5B42F3, #00DDEB);
+                background-origin: border-box;
+                background-clip: padding-box, border-box;
+                position: relative;
+                overflow: hidden;
+                box-shadow: 0px 0px 0.8rem;
+                @include transition(box-shadow, .2s, ease-in-out);
+                @include transition(border, .2s, ease-in-out);
+
+                .card__content {
                     display: flex;
-                    flex-direction: column;
-                    justify-content: space-between;
                     align-items: center;
-                    
-                    .card__content--title {}
+                    width: 100%;
+                    height: 100%;
+                    padding: 1rem;
+                    margin: -1rem 0;
+                    color: transparent;
+                    text-align: center;
+                    z-index: 1;
+                    -webkit-filter: opacity(0);
+                    filter: opacity(0);
+                    @include transition(all, .4s, ease-in-out);
 
-                    .card__content--desc {
-                        max-height: 40%;
-                        overflow: scroll;
-                    }
+                    div {
+                        height: 90%;
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: space-between;
+                        align-items: center;
 
-                    .card__content--button {
-                        padding: 1.2rem;
-                        border: none;
-                        border: 1px solid $backgroundDark;
-                        color: $secondaryLight;
-                        background-color: #191b19;
-                        background-image: linear-gradient(#191b19, #191b19), linear-gradient(to right, #FDC830, #F37335);
-                        @include transition(border, 0.2s, ease-in-out);
+                        .card__content--title {}
 
-                        &:hover {
-                            border: 1px ridge transparent;
-                            background-origin: border-box;
-                            background-clip: padding-box, border-box;
+                        .card__content--desc {
+                            max-height: 40%;
+                            overflow: scroll;
+                        }
+
+                        .card__content--button {
+                            padding: 1.2rem;
+                            border: none;
+                            border: 1px solid $backgroundDark;
+                            color: $secondaryLight;
+                            background-color: #191b19;
+                            background-image: linear-gradient(#191b19, #191b19), linear-gradient(to right, #FDC830, #F37335);
+                            @include transition(border, 0.2s, ease-in-out);
+
+                            &:hover {
+                                border: 1px ridge transparent;
+                                background-origin: border-box;
+                                background-clip: padding-box, border-box;
+                            }
                         }
                     }
                 }
-            }
-
-            .card__img {
-                display: block;
-                object-fit: cover;
-                background: $backgroundDark;
-                width: 100%;
-                height: 100%;
-                position: absolute;
-                top: 0;
-                left: 0;
-                z-index: 0;
-                @include transition(all, 0.3s, ease-in-out);
-            }
-
-            &:hover {
-                box-shadow: 0px 0px 2rem #5B42F3;
-                border-width: 4px;
-                border-radius: 2rem;
-
-                .card__content {
-                    margin: 0;
-                    color: inherit;
-                    -webkit-filter: opacity(1);
-                    filter: opacity(1);
-                }
 
                 .card__img {
-                    transform: scale(1.2);
-                    -webkit-filter: opacity(0) blur(0.5rem);
-                    filter: opacity(0) blur(0.5rem);
+                    display: block;
+                    object-fit: cover;
+                    background: $backgroundDark;
+                    width: 100%;
+                    height: 100%;
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    z-index: 0;
+                    @include transition(all, 0.3s, ease-in-out);
                 }
-            }
 
+                &:hover {
+                    box-shadow: 0px 0px 2rem #5B42F3;
+                    border-width: 4px;
+                    border-radius: 2rem;
+
+                    .card__content {
+                        margin: 0;
+                        color: inherit;
+                        -webkit-filter: opacity(1);
+                        filter: opacity(1);
+                    }
+
+                    .card__img {
+                        transform: scale(1.2);
+                        -webkit-filter: opacity(0) blur(0.5rem);
+                        filter: opacity(0) blur(0.5rem);
+                    }
+                }
+
+            }
         }
     }
 }
