--- a/migration/src/scss/styles/_about.scss
+++ b/migration/src/scss/styles/_about.scss
@@ -87,6 +87,8 @@ section.container#about{
     }
 
     &--text {
+        text-align: justify;
+
         a {
             font-weight: $thin;
         }
