--- a/migration/src/scss/base/_vars.scss
+++ b/migration/src/scss/base/_vars.scss
@@ -5,7 +5,7 @@
 //*: Main
 $backgroundDark: #111;
 $spacePurple: #2E0249;
-$primaryLight: #efffef;
+$primaryLight: #f2fff2;
 $secondaryLight: #e9f1e9;
 
 //*: Technologies 
