--- a/migration/src/scss/styles/_contact.scss
+++ b/migration/src/scss/styles/_contact.scss
@@ -43,7 +43,12 @@ section.container#contact {
         width: 80%;
         margin: auto;
         padding: 2.6rem;
-        background-color: $backgroundDark;
+        border: 4px ridge transparent;
+        border-radius: 2rem;
+        background-image: linear-gradient(to top left, rgba(40, 40, 55), $backgroundDark), linear-gradient(to bottom right, #AF40FF, #5B42F3, #00DDEB);
+        background-origin: border-box;
+        background-clip: padding-box, border-box;
+        box-shadow: 0px 0px 2rem #5B42F3;
 
         &__group {
             display: flex;
@@ -52,40 +57,39 @@ section.container#contact {
 
             label {
                 margin-bottom: 1rem;
+                color: $primaryLight;
                 font-weight: $regular;
             }
 
             input,
             textarea {
                 margin-bottom: 1rem;
+                padding: 0.6rem 1rem;
                 color: $secondaryLight;
                 font-family: $secondaryFont;
                 background-color: #191b19;
-                background-image: linear-gradient(#191b19, #191b19), linear-gradient(to right, #FDC830, #F37335);
+                background-image: linear-gradient(rgb(32, 30, 35), rgb(32, 30, 35)), linear-gradient(to right, #FDC830, #F37335);
                 border: none;
-                border: 1px solid $backgroundDark;
-                padding: 0.6rem 1rem;
-                transition: border 0.2s ease-in;
+                border: 1px ridge rgb(42, 41, 49);
+                transition: border 0.2s ease-in, box-shadow 0.2s ease-in;
 
                 &:focus {
                     outline: none;
                     border-bottom: 1px ridge transparent;
                     background-origin: border-box;
                     background-clip: padding-box, border-box;
-                }
-
-                &.g-recaptcha {
-                    width: 100%;
-                    margin: 1rem 0;
+                    box-shadow: 0px 0px 2rem rgb(42, 41, 49);
                 }
 
                 &.button {
                     padding: 1.2rem;
 
+                    &:focus,
                     &:hover {
                         border: 1px ridge transparent;
                         background-origin: border-box;
                         background-clip: padding-box, border-box;
+                        box-shadow: 0px 0px 2rem rgb(42, 41, 49);
                     }
                 }
             }
