--- a/migration/src/scss/styles/_projects.scss
+++ b/migration/src/scss/styles/_projects.scss
@@ -5,7 +5,7 @@ section.container#projects {
         grid-column: 1/3;
         margin: auto 0;
         text-align: center;
-
+ 
         &--title {
             @include textShadow();
 
@@ -28,18 +28,19 @@ section.container#projects {
             gap: 1.6rem;
 
             .card {
-                max-width: 36rem;
+                position: relative;
                 width: 100%;
+                max-width: 36rem;
                 height: 100%;
                 padding: 1rem;
                 border: 0px ridge transparent;
                 border-radius: 0.5rem;
+                box-shadow: 0px 0px 0.8rem;
                 background-image: linear-gradient(to top left, rgba(40, 40, 55), $backgroundDark), linear-gradient(to bottom right, #AF40FF, #5B42F3, #00DDEB);
                 background-origin: border-box;
                 background-clip: padding-box, border-box;
-                position: relative;
-                overflow: hidden;
-                box-shadow: 0px 0px 0.8rem;
+                transform-style: preserve-3d;
+                perspective: 20rem;
                 @include transition(box-shadow, .2s, ease-in-out);
                 @include transition(border, .2s, ease-in-out);
 
@@ -52,21 +53,26 @@ section.container#projects {
                     margin: -1rem 0;
                     color: transparent;
                     text-align: center;
-                    z-index: 1;
-                    -webkit-filter: opacity(0);
+                    transform: translateZ(1.2rem);
                     filter: opacity(0);
+                    -webkit-filter: opacity(0);
                     @include transition(all, .4s, ease-in-out);
 
                     div {
                         height: 90%;
+                        margin: 0 1.6rem;
                         display: flex;
                         flex-direction: column;
                         justify-content: space-between;
                         align-items: center;
 
-                        .card__content--title {}
+                        .card__content--title {
+                            font-size: 3.2rem;
+                            @include textShadow();
+                        }
 
                         .card__content--desc {
+                            text-align: justify;
                             max-height: 40%;
                             overflow: scroll;
                         }
@@ -91,11 +97,11 @@ section.container#projects {
 
                 .card__img {
                     display: block;
+                    position: absolute;
                     object-fit: cover;
                     background: $backgroundDark;
                     width: 100%;
                     height: 100%;
-                    position: absolute;
                     top: 0;
                     left: 0;
                     z-index: 0;
@@ -115,7 +121,7 @@ section.container#projects {
                     }
 
                     .card__img {
-                        transform: scale(1.2);
+                        transform: scale(1.1);
                         -webkit-filter: opacity(0) blur(0.5rem);
                         filter: opacity(0) blur(0.5rem);
                     }
