feature(bg): Add page bg
TODO: Threejs working in SSR island

--- a/migration/src/scss/base/_mixins.scss
+++ b/migration/src/scss/base/_mixins.scss
@@ -28,6 +28,12 @@
     }
 }
 
+@mixin widescreen{
+    @media (min-width: $widescreen) {
+        @content;
+    }
+}
+
 @mixin gridDisplay($columns, $gap) {
     display: grid;
     grid-template-columns: repeat($columns, 1fr);
