--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -2,7 +2,7 @@
 //*: Main
 $backgroundDark: #111;
 $spacePurple: #2E0249;
-$primaryLight: #efffef;
+$primaryLight: #f2fff2;
 $secondaryLight: #e9f1e9;
 
 //*: Technologies 
@@ -23,7 +23,7 @@ $mobile: 480px;
 $tablet: 768px;
 $desktop: 1280px;
 $lg-desktop: 1440px;
-$widescreen: 2560px;
+$widescreen: 1980px;
 
 //* Fonts
 $primaryFont: 'Source Code Pro', monospace;
