--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,12 +1,10 @@
-@import './base/normalize';
-@import url('https://fonts.googleapis.com/css2?family=Noto+Emoji:wght@300;400&family=Noto+Sans+Symbols+2&family=Noto+Sans+Symbols:wght@300;400&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display&family=Ubuntu:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Source+Code+Pro:wght@300;400;500;700;900&display=swap');
 @import "./base/vars";
+@import './base/normalize';
 @import "./base/mixins";
 @import "./base/init";
 @import "./base/utils";
 
-//! Import app styles in here
+//! import app styles in here
 @import "./styles/navbar";
 @import "./styles/main";
 @import "./styles/about";
