--- a/src/scss/styles/_footer.scss
+++ b/src/scss/styles/_footer.scss
@@ -2,85 +2,89 @@
     transition: fill 0.3s ease-out;
 }
 
-.end {
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
+footer {
+    grid-column: 1/3;
+    position: sticky;
+    bottom: 0;
+    width: 100%;
     background-color: $backgroundDark;
-    padding: 1rem 0;
 
-    &__socials {
-        display: block;
-        font-size: 0;
-        list-style: none;
-        padding: 0;
-        text-align: center;
-        max-width: 100%;
+    .end {
+        height: fit-content;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 1rem 0;
 
-        li {
-            display: inline-block;
-            margin: 1.2rem;
+        &__socials {
+            display: block;
+            font-size: 0;
+            list-style: none;
+            padding: 0;
+            text-align: center;
+            max-width: 100%;
 
-            a {
-                // TODO mobile icon sizes
-                fill: $iconBg;
-                height: 3rem;
-                width: 3rem;
-                transition: fill 0.3s ease-out;
+            li {
+                display: inline-block;
+                margin: 1.2rem;
 
-                .svgContainer {
-                    display: block;
-                    overflow: visible;
-                    padding: 0 0 100%;
-                    position: relative;
-                    width: 100%;
-                    height: 0;
+                a {
+                    // TODO mobile icon sizes
+                    fill: $iconBg;
+                    height: 3rem;
+                    width: 3rem;
+                    transition: fill 0.3s ease-out;
 
-                    &>* {
-                        position: absolute;
-                        height: 75%;
-                        width: 75%;
-                        top: 50%;
-                        left: 50%;
-                        transform: translate(-50%, -50%);
+                    .svgContainer {
+                        display: block;
+                        overflow: visible;
+                        padding: 0 0 100%;
+                        position: relative;
+                        width: 100%;
+                        height: 0;
+
+                        &>* {
+                            position: absolute;
+                            height: 75%;
+                            width: 75%;
+                            top: 50%;
+                            left: 50%;
+                            transform: translate(-50%, -50%);
+                        }
+                    }
+
+                    &#contact_linkedIn:hover {
+                        fill: $linkedIn;
+                        @extend %socialIconHover;
+                    }
+
+                    &#contact_github:hover {
+                        fill: $github;
+                        @extend %socialIconHover;
+                    }
+
+                    &#contact_platzi:hover {
+                        fill: $platzi;
+                        @extend %socialIconHover;
+                    }
+
+                    &#contact_twitter:hover {
+                        fill: $twitter;
+                        @extend %socialIconHover;
                     }
                 }
 
-                &#contact_linkedIn:hover {
-                    fill: $linkedIn;
-                    @extend %socialIconHover;
+                a,
+                svg {
+                    display: block;
                 }
-
-                &#contact_github:hover {
-                    fill: $github;
-                    @extend %socialIconHover;
-                }
-
-                &#contact_platzi:hover {
-                    fill: $platzi;
-                    @extend %socialIconHover;
-                }
-
-                &#contact_twitter:hover {
-                    fill: $twitter;
-                    @extend %socialIconHover;
-                }
-            }
-
-            a,
-            svg {
-                display: block;
             }
         }
-    }
 
-    &__cr {
-        font-weight: $light;
-        font-size: 1.4rem;
-    }
-
-    &__msg {
-        font-size: 1.2rem;
-        font-family: $coolFont;
+        &__msg {
+            font-size: 1.2rem;
+            font-family: $coolFont;
+        }
     }
 }
