--- a/src/scss/styles/_projects.scss
+++ b/src/scss/styles/_projects.scss
@@ -1,173 +1,132 @@
-.projects {
-    grid-column: 1/3;
-    margin: auto 0;
-    text-align: center;
+section.container#projects {
+    height: fit-content;
 
-    &--title {
-        @include textShadow();
+    .projects {
+        grid-column: 1/3;
+        margin: auto 0;
+        text-align: center;
+ 
+        &--title {
+            @include textShadow();
 
-        span {
-            @include textBackground(linear-gradient(to right, $jsYellow, $sassPink))
+            span {
+                @include textBackground(linear-gradient(to right, $jsYellow, $sassPink))
+            }
         }
-    }
 
-    &--mini {
-        margin-top: 1ch;
-        font-size: 1.2rem;
-        font-weight: $light;
-    }
+        &--mini {
+            margin-top: 1ch;
+            font-size: 1.2rem;
+            font-weight: $light;
+        }
 
-    &__showcase {
-        max-width: 100rem;
-        height: 36rem;
-        margin: 2.4rem auto;
-        @include gridDisplay(3, 1fr);
-        gap: 1.6rem;
+        &__showcase {
+            max-width: 100rem;
+            height: 44rem;
+            margin: 2.4rem auto;
+            @include gridDisplay(3, 1fr);
+            gap: 1.6rem;
 
-
-        &--card {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            position: relative;
-            overflow: hidden;
-            margin: 1rem auto;
-            padding: 1rem;
-            height: 100%;
-            width: 100%;
-            max-width: 24rem;
-            border-radius: 1rem;
-            text-align: center;
-            background: linear-gradient(45deg, #37E2D5, #9900F0, #C70A80);
-            // todo 3 different gradients for cards
-
-            &::before {
-                content: '';
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 110%;
-                background-size: cover;
-                background-position: 0 0;
-                transition: transform calc(0.7s * 1.5) cubic-bezier(0.19, 1, 0.22, 1);
-                pointer-events: none;
-            }
-
-            &:after {
-                content: '';
-                display: block;
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 200%;
-                pointer-events: none;
-                background-image: linear-gradient(to bottom,
-                        hsla(0, 0%, 0%, 0) 0%,
-                        hsla(0, 0%, 0%, 0.009) 11.7%,
-                        hsla(0, 0%, 0%, 0.034) 22.1%,
-                        hsla(0, 0%, 0%, 0.072) 31.2%,
-                        hsla(0, 0%, 0%, 0.123) 39.4%,
-                        hsla(0, 0%, 0%, 0.182) 46.6%,
-                        hsla(0, 0%, 0%, 0.249) 53.1%,
-                        hsla(0, 0%, 0%, 0.320) 58.9%,
-                        hsla(0, 0%, 0%, 0.394) 64.3%,
-                        hsla(0, 0%, 0%, 0.468) 69.3%,
-                        hsla(0, 0%, 0%, 0.540) 74.1%,
-                        hsla(0, 0%, 0%, 0.607) 78.8%,
-                        hsla(0, 0%, 0%, 0.668) 83.6%,
-                        hsla(0, 0%, 0%, 0.721) 88.7%,
-                        hsla(0, 0%, 0%, 0.762) 94.1%,
-                        hsla(0, 0%, 0%, 0.790) 100%);
-                transform: translateY(-50%);
-                transition: transform calc(0.7s * 2) cubic-bezier(0.19, 1, 0.22, 1);
-            }
-
-            .content {
+            .card {
                 position: relative;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
                 width: 100%;
+                max-width: 36rem;
+                height: 100%;
                 padding: 1rem;
-                transition: transform 0.7s cubic-bezier(0.19, 1, 0.22, 1);
-                z-index: 1;
+                border: 0px ridge transparent;
+                border-radius: 0.5rem;
+                box-shadow: 0px 0px 0.8rem;
+                background-image: linear-gradient(to top left, rgba(40, 40, 55), $backgroundDark), linear-gradient(to bottom right, #AF40FF, #5B42F3, #00DDEB);
+                background-origin: border-box;
+                background-clip: padding-box, border-box;
+                transform-style: preserve-3d;
+                perspective: 20rem;
+                @include transition(box-shadow, .2s, ease-in-out);
+                @include transition(border, .2s, ease-in-out);
 
-                >*+* {
-                    margin-top: 1rem;
-                }
-            }
+                .card__content {
+                    display: flex;
+                    align-items: center;
+                    width: 100%;
+                    height: 100%;
+                    padding: 1rem;
+                    margin: -1rem 0;
+                    color: transparent;
+                    text-align: center;
+                    transform: translateZ(1.2rem);
+                    filter: opacity(0);
+                    -webkit-filter: opacity(0);
+                    @include transition(all, .4s, ease-in-out);
 
-            .title {
-                font-size: 2rem;
-                font-weight: bold;
-                line-height: 1.2;
-            }
+                    div {
+                        height: 90%;
+                        margin: 0 1.6rem;
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: space-between;
+                        align-items: center;
 
-            .btn {
-                font-size: 1.2rem;
-                padding: 1rem 3rem;
-                background-color: rgba($primaryLight, 0.15);
-                border: 1px solid rgba($primaryLight, 0.25);
-                color: rgba($primaryLight, 0.8);         
-                
-                &:hover {
-                    background-color: rgba($primaryLight, 0.25);
-                    border: 1px solid rgba($primaryLight, 0.5);
-                    color: rgba($primaryLight, 0.9);         
-                }
-            }
-        }
+                        .card__content--title {
+                            font-size: 3.2rem;
+                            @include textShadow();
+                        }
 
-        @media (hover: hover) and (min-width: $tablet) {
-            &--card:after {
-                transform: translateY(0);
-            }
+                        .card__content--desc {
+                            text-align: justify;
+                            max-height: 40%;
+                            overflow: scroll;
+                        }
 
-            .content {
-                transform: translateY(calc(100% - 4.5rem));
+                        .card__content--button {
+                            padding: 1.2rem;
+                            border: none;
+                            border: 1px solid $backgroundDark;
+                            color: $secondaryLight;
+                            background-color: #191b19;
+                            background-image: linear-gradient(#191b19, #191b19), linear-gradient(to right, #FDC830, #F37335);
+                            @include transition(border, 0.2s, ease-in-out);
 
-                >*:not(.title) {
-                    opacity: 0;
-                    transform: translateY(1rem);
-                    transition:
-                        transform 0.7s,
-                        opacity 0.7s cubic-bezier(0.19, 1, 0.22, 1);
-                }
-            }
-
-            &--card:hover,
-            &--card:focus-within {
-                align-items: center;
-
-                &:before {
-                    transform: translateY(-4%);
-                }
-
-                &:after {
-                    transform: translateY(-50%);
-                }
-
-                .content {
-                    transform: translateY(0);
-
-                    >*:not(.title) {
-                        opacity: 1;
-                        transform: translateY(0);
-                        transition-delay: calc(0.7s / 8);
+                            &:hover {
+                                border: 1px ridge transparent;
+                                background-origin: border-box;
+                                background-clip: padding-box, border-box;
+                            }
+                        }
                     }
                 }
-            }
 
-            &--card:focus-within {
-
-                &:before,
-                &:after,
-                .content,
-                .content>*:not(.title) {
-                    transition-duration: 0s;
+                .card__img {
+                    display: block;
+                    position: absolute;
+                    object-fit: cover;
+                    background: $backgroundDark;
+                    width: 100%;
+                    height: 100%;
+                    top: 0;
+                    left: 0;
+                    z-index: 0;
+                    @include transition(all, 0.3s, ease-in-out);
                 }
+
+                &:hover {
+                    box-shadow: 0px 0px 2rem #5B42F3;
+                    border-width: 4px;
+                    border-radius: 2rem;
+
+                    .card__content {
+                        margin: 0;
+                        color: inherit;
+                        -webkit-filter: opacity(1);
+                        filter: opacity(1);
+                    }
+
+                    .card__img {
+                        transform: scale(1.1);
+                        -webkit-filter: opacity(0) blur(0.5rem);
+                        filter: opacity(0) blur(0.5rem);
+                    }
+                }
+
             }
         }
     }
