--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -52,5 +52,5 @@
 }
 
 @mixin textShadow {
-    text-shadow: 0px 0 8rem rgba(242, 242, 242, 55), 0 0 3.2rem rgba(46, 2, 77, 25);
+    text-shadow: 0px 0px 6rem rgba(242, 242, 242, 0.6), 0px 0px 3.2rem rgba(46, 2, 77, 1);
 }
