--- a/src/scss/styles/_footer.scss
+++ b/src/scss/styles/_footer.scss
@@ -4,8 +4,9 @@
 
 footer {
     grid-column: 1/3;
-    position: sticky;
+    position: fixed;
     bottom: 0;
+    width: 100%;
     background: linear-gradient(to top, $backgroundDark 0%, rgba(17, 17, 17, 0.6) 33%, rgba(17, 17, 17, 0.3) 100%);
     -webkit-backdrop-filter: blur(0.1rem);
     backdrop-filter: blur(0.1rem);
