--- a/src/scss/styles/_projects.scss
+++ b/src/scss/styles/_projects.scss
@@ -5,7 +5,7 @@ section.container#projects {
         grid-column: 1/3;
         margin: auto 0;
         text-align: center;
- 
+
         &--title {
             @include textShadow();
 
@@ -34,9 +34,9 @@ section.container#projects {
                 height: 100%;
                 padding: 1rem;
                 border: 0px ridge transparent;
-                border-radius: 0.5rem;
+                border-radius: 1rem;
                 box-shadow: 0px 0px 0.8rem;
-                background-image: linear-gradient(to top left, rgba(40, 40, 55), $backgroundDark), linear-gradient(to bottom right, #AF40FF, #5B42F3, #00DDEB);
+                background-image: linear-gradient(to top left, rgba(40, 40, 55), $backgroundDark), linear-gradient(to bottom right, #AF40FF, #5B42F3, #00a1eb);
                 background-origin: border-box;
                 background-clip: padding-box, border-box;
                 transform-style: preserve-3d;
@@ -67,13 +67,14 @@ section.container#projects {
                         align-items: center;
 
                         .card__content--title {
-                            font-size: 3.2rem;
+                            font-size: $h4;
                             @include textShadow();
                         }
 
                         .card__content--desc {
-                            text-align: justify;
                             max-height: 40%;
+                            padding: 0 0.6rem;
+                            text-align: justify;
                             overflow: scroll;
                         }
 
@@ -83,7 +84,7 @@ section.container#projects {
                             border: 1px solid $backgroundDark;
                             color: $secondaryLight;
                             background-color: #191b19;
-                            background-image: linear-gradient(#191b19, #191b19), linear-gradient(to right, #FDC830, #F37335);
+                            background-image: linear-gradient(#191b19, #191b19), linear-gradient(to top left, #AF40FF, #5B42F3, #00a1eb);
                             @include transition(border, 0.2s, ease-in-out);
 
                             &:hover {
