--- a/src/scss/styles/_projects.scss
+++ b/src/scss/styles/_projects.scss
@@ -16,7 +16,7 @@ section.container#projects {
 
         &--mini {
             margin-top: 1ch;
-            font-size: 1.2rem;
+            font-size: 1.4rem;
             font-weight: $light;
         }
 
@@ -25,7 +25,7 @@ section.container#projects {
             height: 44rem;
             margin: 2.4rem auto;
             @include gridDisplay(3, 1fr);
-            gap: 1.6rem;
+            gap: 2.4rem;
 
             .card {
                 position: relative;
@@ -33,16 +33,18 @@ section.container#projects {
                 max-width: 36rem;
                 height: 100%;
                 padding: 1rem;
-                border: 0px ridge transparent;
-                border-radius: 1rem;
-                box-shadow: 0px 0px 0.8rem;
-                background-image: linear-gradient(to top left, rgba(40, 40, 55), $backgroundDark), linear-gradient(to bottom right, #AF40FF, #5B42F3, #00a1eb);
+                border: 2px ridge transparent;
+                border-radius: 0px;
+                box-shadow: 0px 0px 1rem #5B42F3;
+                background-image: linear-gradient(to top left, rgba(40, 40, 55), $backgroundDark), linear-gradient(to bottom right, #AF40FF, #5B42F3, #00ebeb);
                 background-origin: border-box;
                 background-clip: padding-box, border-box;
                 transform-style: preserve-3d;
                 perspective: 20rem;
-                @include transition(box-shadow, .2s, ease-in-out);
-                @include transition(border, .2s, ease-in-out);
+                @include transition(border, 0.2s, ease-in-out);
+                @include transition(border-radius, 0.3s, ease-in-out);
+                @include transition(box-shadow, 0.2s, ease-in-out);
+
 
                 .card__content {
                     display: flex;
@@ -84,7 +86,7 @@ section.container#projects {
                             border: 1px solid $backgroundDark;
                             color: $secondaryLight;
                             background-color: #191b19;
-                            background-image: linear-gradient(#191b19, #191b19), linear-gradient(to top left, #AF40FF, #5B42F3, #00a1eb);
+                            background-image: linear-gradient(#191b19, #191b19), linear-gradient(to top left, #AF40FF, #5B42F3, #00ebeb);
                             @include transition(border, 0.2s, ease-in-out);
 
                             &:hover {
@@ -100,16 +102,19 @@ section.container#projects {
                     display: block;
                     position: absolute;
                     object-fit: cover;
-                    background: $backgroundDark;
                     width: 100%;
                     height: 100%;
+                    padding: 0;
                     top: 0;
                     left: 0;
                     z-index: 0;
+                    -webkit-filter: opacity(1) blur(0) brightness(0.9);
+                    filter: opacity(1) blur(0) brightness(0.9);
+                    background-image: linear-gradient(to bottom right, #AF40FF, #5B42F3, #00ebeb);
                     @include transition(all, 0.3s, ease-in-out);
                 }
 
-                &:hover {
+                &:hover{
                     box-shadow: 0px 0px 2rem #5B42F3;
                     border-width: 4px;
                     border-radius: 2rem;
@@ -122,9 +127,48 @@ section.container#projects {
                     }
 
                     .card__img {
-                        transform: scale(1.1);
-                        -webkit-filter: opacity(0) blur(0.5rem);
-                        filter: opacity(0) blur(0.5rem);
+                        padding: 1.8rem;
+                        -webkit-filter: opacity(0.1) blur(0.5rem);
+                        filter: opacity(0.1) blur(0.5rem);
+                    }
+                }
+
+                &:nth-child(2n){
+                    background-image: linear-gradient(to top left, rgba(40, 40, 55), $backgroundDark), linear-gradient(to bottom left, #AF40FF, #5B42F3, #00ebeb);
+
+                    .card__img {
+                        display: block;
+                        position: absolute;
+                        object-fit: cover;
+                        width: 100%;
+                        height: 100%;
+                        padding: 0;
+                        top: 0;
+                        left: 0;
+                        z-index: 0;
+                        -webkit-filter: opacity(1) blur(0) brightness(0.9);
+                        filter: opacity(1) blur(0) brightness(0.9);
+                        background-image: linear-gradient(to bottom left, #AF40FF, #5B42F3, #00ebeb);
+                        @include transition(all, 0.3s, ease-in-out);
+                    }
+
+                    &:hover{
+                        box-shadow: 0px 0px 2rem #5B42F3;
+                        border-width: 4px;
+                        border-radius: 2rem;
+    
+                        .card__content {
+                            margin: 0;
+                            color: inherit;
+                            -webkit-filter: opacity(1);
+                            filter: opacity(1);
+                        }
+    
+                        .card__img {
+                            padding: 1.8rem;
+                            -webkit-filter: opacity(0.1) blur(0.5rem);
+                            filter: opacity(0.1) blur(0.5rem);
+                        }
                     }
                 }
 
